--- a/3/3.md
+++ b/3/3.md
@@ -10,7 +10,7 @@
 ### Решение
 
 ````bash
- rsync -av –progress –delete –exclude “.*” –checksum . kefir@192.168.1.70:/tmp/backup
+ rsync -av –-progress –-delete –-exclude “.*” -–checksum . kefir@192.168.1.70:/tmp/backup/
 
 ````
 ![text](1-1.png)
@@ -26,6 +26,10 @@
 
 ### Решение
 
+````bash
+ 30 13 * * * rsync -av --progress --delete /home/kefir/ /tmp/backup/
+
+````
 ![text](2-1.png)
 ![text](2-2.png)
 
